[project]
name = "yolo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = ["pyqt6>=6.10.0"]

[dependency-groups]
dev = ["basedpyright>=1.34.0", "pyinstaller>=6.17.0", "ruff>=0.14.7"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["ALL"]
fixable = ["ALL"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["D104"]
"**/{tests,docs,tools}/*" = ["E402"]

[tool.basedpyright]
typeCheckingMode = "strict"
strictListInference = true
strictDictionaryInference = true
strictSetInference = true
allowedUntypedLibraries = ["PyQt6"]
